# ChatApp

./: .gitignore  CMakeLists.txt
Client/: ClientController.cpp  ClientController.h  ClientController_old_backup.cpp  ConnectPageController.cpp  ConnectPageController.h  FileMessageItem.cpp  FileMessageItem.h  TextMessageItem.cpp  TextMessageItem.h  main.cpp
Client/Controller/: ClientController.cpp  ClientController.h  ConnectPageController.cpp
Client/Core/: CryptoManager.cpp  DatabaseManager.cpp  User.cpp
Client/Model/Core/: DatabaseManager.cpp  DatabaseManager.h
Client/Model/Network/: WebSocketClient.cpp
Client/Network/: TusUploader.cpp  WebSocketClient.cpp
Client/UI/: ClientChatWindow.cpp  ClientChatWindow.ui  ConnectPage.cpp
Client/View/: ClientChatWindow.cpp  ClientChatWindow.h  ClientChatWindow.ui  ConnectPage.cpp  ConnectPage.ui
CommonCore/: CryptoManager.cpp  NotificationManager.cpp  NotificationManager.h  TusDownloader.cpp  TusDownloader.h  TusUploader.cpp  TusUploader.h
CommonUI/: AttachmentMessage.cpp  AudioMessage.cpp  AudioWaveform.cpp  BaseChatWindow.cpp  BaseChatWindow.h  BaseMessageItem.cpp  BaseMessageItem.h  ChatHeader.cpp  ChatHeader.h  FileMessage.cpp  FileMessage.h  FileMessageItem.cpp  FileMessageItem.h  InfoCard.cpp  InfoCard.h  MessageBubble.cpp  MessageBubble.h  MessageData.h  MessageDirection.h  ModernTheme.h  ModernThemeApplier.cpp  ModernThemeApplier.h  TextMessage.cpp  TextMessageItem.cpp  TextMessageItem.h  ToastNotification.cpp  ToastNotification.h  UserCard.cpp  UserCard.h  VoiceMessageWidget.cpp  VoiceMessageWidget.h
CommonUI/ChatSection/: AttachmentMessage.cpp  AttachmentMessage.h  AudioMessage.cpp  AudioMessage.h  AudioWaveform.cpp  AudioWaveform.h  ChatInputWidget.cpp  ChatInputWidget.h  ChatStyles.cpp  ChatStyles.h  EmptyMessageState.cpp  EmptyMessageState.h  FileMessage.cpp  FileMessage.h  InfoCard.cpp  MessageAliases.h  MessageBubble.cpp  MessageComponent.cpp  MessageComponent.h  TextMessage.cpp  TextMessage.h  VoiceMessageWidget.cpp  VoiceMessageWidget.h
Components/: ExampleUsage.cpp  InfoCard.cpp  InfoCard.h  MessageBubble.cpp  MessageBubble.h  MessageBubbleExample.cpp
Core/: CryptoManager.cpp  DatabaseManager.cpp  TusServer.cpp  TusServer.h  User.cpp  WebSocketClient.cpp  WebSocketClient.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
Features/Chat/: BaseChatWindow.cpp  BaseChatWindow.h  BaseMessageItem.h  ChatController.cpp  ChatController.h  ChatWindow.cpp  ChatWindow.h  ChatWindow.ui  ChatWindow.ui.backup  ClientChatWindow.cpp  ClientChatWindow.h  ClientChatWindow.ui  FileMessageItem.cpp  FileMessageItem.h  MessageItem.cpp  MessageItem.h  ServerChatWindow.cpp  ServerChatWindow.h  ServerChatWindow.ui  ServerChatWindow.ui.backup  TextMessageItem.cpp  TextMessageItem.h  TextMessageItem.ui
Features/Connection/: ConnectPage.cpp  ConnectPage.h  ConnectPage.ui  ConnectPageController.cpp  ConnectPageController.h
Features/FileTransfer/: TusDownloader.h  TusUploader.cpp  TusUploader.h
Server/: ServerController.cpp  ServerController.h  ServerController_old_backup.cpp  TextMessageItem.cpp  main.cpp
Server/Controller/: ServerController.cpp  ServerController.h
Server/Core/: CryptoManager.h
Server/Model/Core/: DatabaseManager.cpp  DatabaseManager.h  User.cpp  User.h
Server/Model/Network/: TusServer.cpp  WebSocketServer.cpp
Server/Network/: TusDownloader.cpp  TusDownloader.h  TusServer.cpp  TusUploader.h  WebSocketServer.cpp
Server/UI/: ServerChatWindow.cpp  ServerChatWindow.ui
Server/View/: ServerChatWindow.cpp  ServerChatWindow.h  ServerChatWindow.ui  resources.qrc
Server/View/Components/: UserCard.cpp  UserListManager.cpp  UserListManager.h
